fixed border radius issue by applying an overflow: hidden property to the __card

--- a/static/css/scss/home/home.css
+++ b/static/css/scss/home/home.css
@@ -21,6 +21,7 @@ header i {
 }
 .restaurant__card {
   border-radius: 15px;
+  overflow: hidden;
 }
 .restaurant__card img {
   -o-object-fit: cover;
