--- a/static/css/scss/home/restaurants/restaurants.scss
+++ b/static/css/scss/home/restaurants/restaurants.scss
@@ -6,6 +6,7 @@
 
   &__card {
     border-radius: $big-radius;
+    overflow: hidden;
 
     img {
       object-fit: cover;
