--- a/static/css/scss/styles.css
+++ b/static/css/scss/styles.css
@@ -22,6 +22,7 @@ header i {
 }
 .restaurant__card {
   border-radius: 15px;
+  overflow: hidden;
 }
 .restaurant__card img {
   -o-object-fit: cover;
